Fix the height of the main parallax on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -12,20 +12,18 @@ h1, h2 {
   height: 200px;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 922px) {
     .logo {
-       letter-spacing: 2rem;
+       letter-spacing: 1.8rem;
+    }
+    .parallax-container  {
+        height:auto;
     }
 }
 
 @media only screen and (max-width: 600px) {
     .logo {
-       letter-spacing: 0.8rem;
-    }
-}
-
-@media only screen and (max-width: 400px) {
-    .logo {
        letter-spacing: 0.4rem;
     }
 }
+
